syntax = "proto3";

package lakh;

import "google/protobuf/duration.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service Lakh {
  rpc Work(stream Job) returns(google.protobuf.Empty) {}
  rpc Join(stream JobResult) returns(stream Job) {}
  rpc GetDeadJobs(google.protobuf.Empty) returns(DeadJobs) {}
}

message Job {
  string id = 1;
  string name = 2;
  repeated string args = 3;
  oneof execution_time {
    google.protobuf.Duration delayed = 4;
    google.protobuf.Timestamp scheduled = 5;
    google.protobuf.Empty immediate = 6;
  }
  google.protobuf.Duration reservation_time = 7;
}

enum JobKind { IMMEDIATE = 0; SCHEDULED = 1; DELAYED = 2; }

message JobResult {
  string job_id = 1;
  string job_name = 2;
  JobStatus status = 3;
}

enum JobStatus { FAILED = 0; SUCCEEDED = 1; }

message DeadJobs { repeated Job jobs = 1; }